<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Namnsdagar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Inställningar</string>
    <string name="set_time">Välj tid då notifikationen skall visas</string>
    <string name="choose_mode">Visa notifikation dagen innan</string>
    <string name="choose_notification">Aktivera notifikationer</string>
    <string name="dialog_title">Välj lista</string>
    <string name="dialog_message">Välj om du vill ha endast officiella namn eller även inkludera inofficiella</string>
    <string name="dialog_official">Officiella</string>
    <string name="dialog_unofficial">Inofficiella</string>
    <string name="choose_contacts">Välj kontakter</string>
    <string name="contacts_list">Kontaktlista</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Namnsdag</string>
    <string name="main_footer">Ett gemensamt arbete med deltagare från Sweddit</string>

</resources>