    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:background="@color/bg_title"
            android:gravity="center"
            android:text="@string/menu_settings"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/gray"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/set_time"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/choose_contacts"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:typeface="sans" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/choose_mode"
            android:textSize="14sp"
            android:typeface="sans" />

        <CheckBox
            android:id="@+id/checkBoxNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/choose_notification"
            android:textSize="14sp"
            android:typeface="sans" />

    </LinearLayout>